# PersonalWork

Insanity/: CMakeLists.txt  readme.md
Insanity/include/: aimages.hpp  aluautil.hpp  asounds.hpp  savestate.hpp  testlib.hpp
Insanity/rsc/lua/: game.lua  lib.lua
Insanity/rsc/shaders/: image_shader.glsl
Insanity/rsc/shaders/Darwin/: game_shader.glsl
Insanity/rsc/shaders/Linux/: image_shader.glsl
Insanity/src/: CMakeLists.txt  aimages.cpp  aluautil.cpp  asounds.cpp  main.cpp  savestate.cpp  testlib.cpp
Not Runling Run/: Drones.cpp  Drones.h  Vec2.cpp
Not Runling Run/NotRunlingRun-old/: Drones.py  Makefile  camera.py  doodad.py  main.py  vector2.py
Not Runling Run/NotRunlingRun-old/assets/: beauty.aseprite  rocks.aseprite
Not Runling Run/NotRunlingRun-old/old-python/: client.py  client2.py  client3.py  server.py  server2.py  server3.py
RPI Classwork/Computer Organization HW3/: hw03.s
RPI Classwork/Data Structures HW9/: Movie.h  Movie_main.cpp  Table.h  Table_main.cpp  main.cpp
